# langraph-bot-v1

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DESIGN.md  Dockerfile  README.md  TODOS.md  alembic.ini  benchmark_accuracy.py  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  start-tunnel.ps1  test_real_images_manual.py
.github/workflows/: ci.yml
alembic/: README  env.py
alembic/versions/: 0001_baseline.py  0002_cascade_fk.py  0003_unique_open_interrupt.py  0004_widen_wa_secret_columns.py  0005_add_content_tsvector.py  0006_add_embedding_cache.py  0007_add_vision_cache.py  0008_add_tenant_tone.py  0008_lab_staff_search.py  0008_patient_index.py  0009_google_oauth.py  0009_tenant_tone_freetext.py
app/: auth.py  config.py  crypto.py  db.py  main.py  policies.py  runtime.py  scheduler.py  state.py
app/channels/: base.py  (+3 more)
docs/: agent-dna.md  catalog-schema.jsonl  ejemplo-dental.jsonl  ejemplo-gym-fitness.jsonl  ejemplo-servicios-profesionales.jsonl  sp-diagnostico-histologico-citologia-especifica.jsonl  sp-diagnostico-histologico.jsonl  sp-protocolos-oncologicos.jsonl
medical_data/: sp-diagnostico-histologico.jsonl
tests/: conftest.py  test_admin_api.py  test_catalog_qa.py  test_drive_search.py  test_embedding_cache.py  test_evals.py  test_google_oauth.py  test_graph.py  test_graph_integration.py  test_indexing.py  test_integration_ocr_medical_data.py  test_lab_search_handler.py  test_lab_search_routing.py  test_medical_orders_real.py  test_nodes.py  test_patient_index_crud.py  test_patient_search.py  test_policies.py  test_rag.py  test_rerank.py  test_retrieve_node.py  test_runtime.py  test_scheduler.py  test_security.py  test_stt.py  test_telegram_webhook.py  test_tenant_crud.py  test_tenant_scoped_auth.py  test_vision.py  test_whatsapp_dedup.py  test_whatsapp_webhook.py
(+51 files in other folders)
