[project]
name = "langraph-bot-v1"
version = "0.1.0"
description = "Multi-tenant LangGraph RAG bot — Telegram/WhatsApp with human-in-the-loop"
requires-python = ">=3.12"
dependencies = [
    # LangGraph stack
    "langgraph>=0.3.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langsmith>=0.2.0",
    # FastAPI / web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "jinja2>=3.1.0",
    "slowapi>=0.1.9",
    # Database
    "psycopg[pool]>=3.1.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.2",
    "alembic>=1.14.0",
    # Telegram / channels
    "python-telegram-bot>=21.6",
    "httpx>=0.27.0",
    # Document processing
    "pypdf>=4.3.1",
    "filetype>=1.2.0",
    "tiktoken>=0.8.0",
    "pillow>=10.4.0",
    "pytesseract>=0.3.13",
    # Security / crypto
    "bcrypt>=4.0.0",
    "cryptography>=42.0.0",
    "pyjwt>=2.8.0",
    # Config / utils
    "pydantic-settings>=2.5.2",
    "python-dotenv>=1.0.1",
    # Scheduling
    "apscheduler>=3.10.0",
    # Monitoring
    "sentry-sdk[fastapi]>=2.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: requires live docker services (postgres)",
    "eval: requires LANGCHAIN_API_KEY, calls LLM",
]
